alignment fixed

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ a:hover{                            /* while hovering over nav links */
 
  section {
     padding-top: 5vh;
-    height:96vh;
+    min-height:100vh;
     margin:0 10rem;
     box-sizing: border-box;
     min-height:fit-content;
@@ -174,15 +174,27 @@ a:hover{                            /* while hovering over nav links */
 }
 
 .section__pic-container{
-    display:flex;
-    height:380px;
-    width:380px;
-    margin:auto 0;
+
+    height: 300px;
+    width: 300px;
+    /* background-color: aquamarine; */
+    
+ 
+}
+
+.section__pic-container img{
+    object-fit: cover;
+    object-position: center;
+    height: 100%;
+    width: 100%;
 }
 
 .section__text{
-    align-self:center;
-    text-align:center;
+ /* background-color: burlywood; */
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ gap: 0.4em;
 }
 
 .section__text p{
@@ -195,7 +207,7 @@ a:hover{                            /* while hovering over nav links */
 
 .section__text__p1 {
     font-size: 1.6rem;
-    margin-bottom: 0.5rem;
+
 }
 .section__text__p2{
     font-size: 2.2rem;
@@ -256,6 +268,8 @@ a:hover{                            /* while hovering over nav links */
     color:white;
 }
 
+
+
 .btn-color-1:hover{
     background: rgb(255,255,255)0.1rem solid;
     
@@ -266,9 +280,52 @@ a:hover{                            /* while hovering over nav links */
 }
 
 .btn-color-2:hover{
-    border:rgb(255,255,255).0.1rem solid;
+    background-color: white;
+    color: black;
+    border: 2px solid ;
 }
 
 .btn-container{
     gap:1rem;
 }
+
+
+#profile{
+    /* background-color: aqua; */
+    align-items: center;
+
+}
+
+.btn-color-1:hover{
+    background-color: white;
+    color: black;
+    border: 2px solid ;
+}
+.btn-color-2{
+    background-color: black;
+    color: white;
+
+}
+
+@media only screen and (max-width: 600px) {
+   #profile{
+    flex-direction: column;
+    background-color: blanchedalmond;
+    margin-top: 30px;
+    
+
+  
+   }
+   .section__pic-container img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+   
+   }
+
+   section{
+    margin: 0%;
+   }
+
+   
+  }
